

[package]
name = "rgb-crypto-agent"
version = "0.1.2"
edition = "2021"
authors = ["Jack Choi <cymqqqq@gmail.com>"]
description = "a Rust library designed for building and managing generative AI agents, leveraging the capabilities of large language models (LLMs)"
license = "MIT"
readme = "README.md"
repository = "https://github.com/cymqqqq/crypto-agent.git"
keywords = ["AI", "Agent", "Generative", "NLP", "LLM", "Bitcoin", "RGB", "LNPBP"]

[dependencies]
commit_verify = "=0.12.0-beta.4"
amplify = "~4.8.0"
strict_encoding = "~2.8.1"
strict_types = "~2.8.1"
rig-core = "0.2.1"
aluvm = "0.12.0-beta.3"
tokio = {version ="1.42.0", features = ["full"]}
hypersonic = { version = "0.12.0-beta.4", features = ['all']}
dotenv = "0.15.0"